--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "mongodb": "^2.2.28",
     "mongoose": "^4.10.4",
