--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "react-sortable-hoc": "^0.6.5"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
