--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^2.2.28",
     "mongoose": "^4.10.4",
     "prop-types": "^15.5.8",
+    "rc-progress": "^2.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
